cmake_minimum_required(VERSION 3.15)
project(Chip-8)

set(CMAKE_CXX_STANDARD 20)

add_executable(Chip-8 main.cpp CPU/CPU.cpp IO/Graphics.cpp IO/Input.cpp Memory/ROM.cpp CPU/Instructions.cpp Window.cpp)

INCLUDE(FindPkgConfig)
find_package(GLEW REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(glfw3 REQUIRED)

PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)

INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS} ${OPENGL_LIBRARIES} ${GLFW_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL2_LIBRARIES} ${OPENGL_LIBRARIES} GL glfw ${GLEW_LIBRARIES})